# ssi

./: .env.sample  .travis.yml  Cargo.toml  Dockerfile  index.html
.github/workflows/: docker.yml
config/: nginx.conf
src/: main.rs  routes.rs
