[package]
name = "howtocards_ssi"
version = "0.1.2"
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.99"
serde_json = "1.0.40"
pretty_env_logger = "0.3.1"
actix-web = "1.0.5"
futures = "0.1.28"
dotenv = "0.14.1"
log = "0.4.8"
