[package]
name = "howtocards_ssi"
version = "0.2.1"
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
dotenv = "0.14.1"
futures = "0.1.28"
htmlescape = "0.3.1"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde = "1.0.99"
serde_json = "1.0.40"
